--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -13,6 +13,7 @@
   &__links {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
   }
 
   &__contact-link {
@@ -33,9 +34,17 @@
       box-shadow: none;
     }
 
-    &:not(first-child) {
+    &:not(:first-child) {
       margin-left: 2rem;
     }
+
+    @media only screen and (max-width : 443px) {
+      &:not(:first-child) {
+        margin-left: 0;
+        margin-top: 1rem;
+      }
+    }
+
   }
 
   &__copyright {
